Small css fixes, transparent brush fix and gaps on eraser

--- a/src/components/ProjectOptions/ExportPanel/ExportPanel.css
+++ b/src/components/ProjectOptions/ExportPanel/ExportPanel.css
@@ -25,7 +25,7 @@
 .exportButton {
     padding: 0.75rem;
     width: 100%;
-    height: 1rem;
+    height: 2.5rem;
     color: var(--mediumGray1);
     border: none;
     display: flex;
