--- a/src/components/ProjectOptions/LayersPanel/LayersPanel.css
+++ b/src/components/ProjectOptions/LayersPanel/LayersPanel.css
@@ -17,7 +17,7 @@
 .addLayerButton {
     padding: 0.75rem;
     width: 100%;
-    height: 1rem;
+    height: 2.5rem;
     color: var(--mediumGray1);
     border: none;
     display: flex;
