--- a/src/components/Workspace/PixelCanvas/PixelCanvas.css
+++ b/src/components/Workspace/PixelCanvas/PixelCanvas.css
@@ -5,4 +5,5 @@
     position: relative;
     image-rendering: crisp-edges;
     /* cursor: none; */
+    box-shadow: 0px 0px 15px;
 }
