--- a/src/components/Workspace/Workspace.css
+++ b/src/components/Workspace/Workspace.css
@@ -5,7 +5,7 @@
 	width: 100%;
 	height: 100%;
 	background-color: var(--blueGray2);
-	box-shadow: inset 0px 0px 10px;
+	box-shadow: inset 0px 0px 15px;
 	overflow: hidden;
 	touch-action: manipulation;
 }
